Got an almost-working SDL2 window to open

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "CHIP-8Emu"
 version = "0.1.0"
+authors = ["Scott Prouty"]
 edition = "2024"
 
 [dependencies]
-sdl3 = "0.14.36"
+sdl3 = {version = "*", features = ["bundled"] }
