--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "CHIP-8Emu"
+name = "chip8emu" # Crate name
 version = "0.1.0"
-authors = ["Scott Prouty"]
+authors = ["Scott P"]
 edition = "2024"
 
 [dependencies]
